docs/website/src/main/resources/certifications/jakarta-authorization/1.5/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta Authorization.

# Eclipse GlassFish 5.1 Certification Request

- Product Name, Version and download URL (if applicable): <br/>
  [Eclipse GlassFish 5.1](https://eclipse-ee4j.github.io/glassfish/download)
  Includes Authorization 1.6.1
- Specification Name, Version and download URL: <br/>
  [Jakarta Authorization, 1.5](https://jakarta.ee/specifications/authorization/1.5/)
- TCK Version, digital SHA-256 fingerprint and download URL: <br/>
  [Jakarta Authorization TCK 1.5.0](https://download.eclipse.org/jakartaee/authorization/1.5/eclipse-authorization-tck-1.5.0.zip), SHA-256: `81373a045b7bb187989eafbf6c4be5b6f7f28d25cdbdae03e2fcf343889f77f2`
- Public URL of TCK Results Summary: <br/>
  [TCK results summary](TCK-Results.html)
- Any Additional Specification Certification Requirements: <br/>
  None
- Java runtime used to run the implementation: <br/>
  Oracle JDK 1.8.0_191
- Summary of the information for the certification environment, operating system, cloud, ...: <br/>
  Linux Centos 7


Test results:

```

[javatest.batch] ********************************************************************************
[javatest.batch] Completed running 25 tests.
[javatest.batch] Number of Tests Passed      = 25
[javatest.batch] Number of Tests Failed      = 0
[javatest.batch] Number of Tests with Errors = 0
[javatest.batch] ********************************************************************************
```
